@@ -8,7 +8,8 @@ margins of genotypes and annotations via blocking.
 \usage{
 seqBlockApply(gdsfile, var.name, FUN, margin=c("by.variant"),
     as.is=c("none", "list", "unlist"), var.index=c("none", "relative", "absolute"),
-    bsize=1024L, parallel=FALSE, .useraw=FALSE, .padNA=TRUE, .progress=FALSE, ...)
+    bsize=1024L, parallel=FALSE, .useraw=FALSE, .padNA=TRUE, .tolist=FALSE,
+    .progress=FALSE, ...)
 }
 \arguments{
     \item{gdsfile}{a \code{\link{SeqVarGDSClass}} object}
@@ -38,6 +39,8 @@ seqBlockApply(gdsfile, var.name, FUN, margin=c("by.variant"),
         if RAW is used}
     \item{.padNA}{\code{TRUE}, pad a variable-length vector with NA if the
         number of data points for each variant is not greater than 1}
+    \item{.tolist}{if \code{TRUE}, return a list of vectors instead of the
+        structure \code{list(length, data)} for variable-length data}
     \item{.progress}{if \code{TRUE}, show progress information}
     \item{...}{optional arguments to \code{FUN}}
 }
