@@ -7,7 +7,7 @@
 \usage{
 seqUnitApply(gdsfile, units, var.name, FUN, as.is=c("none", "list", "unlist"),
     parallel=FALSE, ..., .bl_size=256L, .progress=FALSE, .useraw=FALSE,
-    .padNA=TRUE, .envir=NULL)
+    .padNA=TRUE, .tolist=FALSE, .envir=NULL)
 }
 \arguments{
     \item{gdsfile}{a \code{\link{SeqVarGDSClass}} object}
@@ -32,6 +32,8 @@ seqUnitApply(gdsfile, units, var.name, FUN, as.is=c("none", "list", "unlist"),
         if RAW is used}
     \item{.padNA}{\code{TRUE}, pad a variable-length vector with NA if the
         number of data points for each variant is not greater than 1}
+    \item{.tolist}{if \code{TRUE}, return a list of vectors instead of the
+        structure \code{list(length, data)} for variable-length data}
     \item{.envir}{NULL, an environment object, or a list/data.frame}
     \item{...}{optional arguments to \code{FUN}}
 }
